delete bower, use only npm and add gulp local

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,9 @@
     <!--build:js js/jquery.min.js -->
     <script src="js/jquery.js"></script>
     <!--endbuild-->
+    <!--build:js js/bootstrap-sprockets.min.js -->
+    <script src="js/bootstrap-sprockets.js"></script>
+    <!--endbuild-->
     <!--build:js js/bootstrap.min.js -->
     <script src="js/bootstrap.js"></script>
     <!--endbuild-->
