complete with know_us

--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
     <title>Formas futuro</title>
     <!--build:css css/styles.min.css-->
     <link href="css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <!--endbuild-->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,9 +24,9 @@
         <div class="navbar-header">
           <button id="navbar-toggle" type="button" class="navbar-toggle collapsed">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar white"></span>
+            <span class="icon-bar white"></span>
+            <span class="icon-bar white"></span>
           </button>
           <a class="navbar-brand" href="#">
             <img src="images/img_index/Logo3FF.png">
@@ -35,32 +35,32 @@
       </div>
     </nav>
     <section id="content">
-    <div class="jumbotron bg01 index-ff">
-        <div class="container">
-          <div class="row ">
-            <div class="col-md-6 col-md-offset-3 images">
-              <img id="img_index_center01" class="img-center " src="images/img_index/img01.png">
-              <img id="img_index_center02" class="img-center hide" src="images/img_index/img02.png">
-              <img id="img_index_center03" class="img-center hide" src="images/img_index/img03.png">
+      <div class="jumbotron bg01 index-ff">
+          <div class="container">
+            <div class="row ">
+              <div class="col-xs-12 col-md-6 col-md-offset-3 images">
+                <img id="img_index_center01" class="img-center " src="images/img_index/img01.png">
+                <img id="img_index_center02" class="img-center hide" src="images/img_index/img02.png">
+                <img id="img_index_center03" class="img-center hide" src="images/img_index/img03.png">
+              </div>
+            </div>
+            <div class="row buttons">
+              <div class="col-xs-12 col-md-2 col-md-offset-4">
+                <a href="know_us.html" class="btn btn-warning btn-block">Conócenos</a>
+              </div>
+              <div class="col-xs-12 col-md-2">
+                <a href="#" class="btn btn-default btn-block">Diviertéte</a>
+              </div>
             </div>
           </div>
-          <div class="row buttons">
-            <div class="col-md-2 col-md-offset-4">
-              <a href="#" class="btn btn-warning btn-block">Conócenos</a>
-            </div>
-            <div class="col-md-2">
-              <a href="#" class="btn btn-default btn-block">Diviertéte</a>
-            </div>
-          </div>
-        </div>
-    </div>
+      </div>
     </section>
     <section id="menu">
       <div class="modal-nav-content">
         <div class="modal-nav-body">
           <ul>
-            <li><b>Home</b></li>
-            <li><b>Conócenos</b></li>
+            <li><b><a href="/">Home</a></b></li>
+            <li><b><a href="know_us.html">Conócenos</a></b></li>
             <li class="more-padding" >Quienes Somos</li>
             <li class="more-padding" >Productos</li>
             <li class="more-padding" >Blog</li>
@@ -83,7 +83,7 @@
     <!--build:js js/bootstrap.min.js -->
     <script src="js/bootstrap.js"></script>
     <!--endbuild-->
-    <!--build:js js/main.min.js -->
-    <script src="js/main.js"></script>
+    <!--build:js js/home.min.js -->
+    <script src="js/home.js"></script>
     <!--endbuild-->
   </body>
