add corrections know_us

--- a/app/know_us.html
+++ b/app/know_us.html
@@ -18,9 +18,8 @@
   </head>
   <body id="body-know_us">
   
-    <nav class="navbar navbar-default navbar-fixed-top know_us">
+    <nav class="navbar navbar-default navbar-fixed-top no-fixed know_us">
       <div class="container">
-
         <div class="navbar-header">
           <button id="navbar-toggle" type="button" class="navbar-toggle collapsed">
             <span class="sr-only">Toggle navigation</span>
@@ -42,7 +41,7 @@
             <div class="item active">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Todo comenzó hace más de</b></p>
                   <p class="text bold-blue">25 Años</p>
                   <p class="text">Con la ilusión de conservar una historia familiar: </p>
@@ -57,7 +56,7 @@
             <div class="item ">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Y como en toda familia siempre existe alguien que quiere </b></p>
                   <p class="text bold-blue">hacer las cosas diferentes.</p>
                 </div>
@@ -70,7 +69,7 @@
             <div class="item ">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Era Medellín y recién comenzaba la década de los 90’s. Una época difícil para soñar con el </b></p>
                   <p class="text bold-blue">trabajo honesto y bien hecho</p>
                 </div>
@@ -83,7 +82,7 @@
             <div class="item ">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text bold-blue"><span class="font-dif">La unión entre el esfuerzo,</span> <br> <span class="font-dif-less">el amor por el trabajo</span> <br><span class="font-dif">y la familia,</span> </p>
                   <p class="text"><b>Hicieron que esta empresa naciera en la misma casa donde creció gran parte de la familia. </b></p>
                 </div>
@@ -96,7 +95,7 @@
             <div class="item">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Una máquina, tres resmas de papel, </b></p>
                   <p class="text bold-blue">las ganas de  salir adelante </p>
                   <p class="text"><b>y la convicción de ser siempre justos con quienes hacían posible nuestro crecimiento, fueron suficientes para poner en marcha este sueño</b> </p>
@@ -110,7 +109,7 @@
             <div class="item ">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Ya para el 2000 llegaron nuevas ideas y empezamos a encaminarnos por otro mercado. <br><br> Productos escolares como los blocks de dibujo y de colores, fueron determinantes para dar vida a lo que es hoy </b></p>
                   <p class="text bold-blue">Formas Futuro.</p>
                 </div>
@@ -123,7 +122,7 @@
             <div class="item ">
               <div class="container">
               <div class="row vertical-align">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 texts">
+                <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text"><b>Seguiremos fieles a nuestra promesa de valor por nuestros clientes, que también son nuestros amigos.</b></p>
                   <p class="text bold-blue">Y por ti, que te estás tomando el tiempo para conocernos. </p>
                 </div>
@@ -192,8 +191,9 @@
       <section id="section05">
         <div class="container">
           <h2>Si te gustó lo que viste  y podría resolver tus necesidades...  </h2>
-          <h4>Quiere que decir valió la pena recorrer nuestra historia y que podríamos estar a un clic de comenzar una valiosa amistad. ¿Cómo prefieres hacerlo? </h4>
+          <p class="text-title">Quiere que decir valió la pena recorrer nuestra historia y que podríamos estar a un clic de comenzar una valiosa amistad. ¿Cómo prefieres hacerlo? </p>
           <div class="row">
+            <div class="h-align">
             <div class="col-sm-5 col-sm-offset-1">
               <div class="row">
                 <div class="col-xs-6"><img src="images/img_know_us/pin.png"></div>
@@ -203,7 +203,7 @@
                   <a href="#" class="btn btn-danger">Ver más</a>
                 </div>
               </div>
-              <div class="row">
+              <div class="row top-buffer">
                 <div class="col-xs-6"><img src="images/img_know_us/dis.png"></div>
                 <div class="col-xs-6">
                   <p class="title-section">Me gustaría</p>
@@ -259,6 +259,7 @@
                   </div>
               </div>
             </div>
+            </div>
           </div>
         </div>
       </section>
@@ -266,10 +267,10 @@
         <div class="container">
           <h2>!hablemos! <br>o solo dinos hola </h2>
           <div class="row vertical-align">
-            <div class="col-sm-6">
+            <div class="col-sm-5 col-md-offset-1">
               <img src="images/img_index/img02.png">
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4 ">
               <form>
                 <div class="form-group">
                   <label for="formGroupExampleInput">Mi nombre es</label>
@@ -296,11 +297,11 @@
           <ul>
             <li><b><a href="/">Home</a></b></li>
             <li><b><a href="know_us.html">Conócenos</a></b></li>
-            <li class="more-padding" >Quienes Somos</li>
+            <li class="more-padding" >Quiénes Somos</li>
             <li class="more-padding" >Productos</li>
             <li class="more-padding" >Blog</li>
             <li class="more-padding" >Contacto</li>
-            <li><b>Diviertete</b></li>
+            <li><b>Diviértete</b></li>
             <li><b>Soy un cliente</b></li>
           </ul>
         </div>
