--- a/app/index.html
+++ b/app/index.html
@@ -37,19 +37,23 @@
     <section id="content">
       <div class="jumbotron bg01 index-ff">
           <div class="container">
-            <div class="row ">
-              <div class="col-xs-12 col-md-6 col-md-offset-3 images">
-                <img id="img_index_center01" class="img-center " src="images/img_index/img01.png">
-                <img id="img_index_center02" class="img-center hide" src="images/img_index/img02.png">
-                <img id="img_index_center03" class="img-center hide" src="images/img_index/img03.png">
-              </div>
-            </div>
-            <div class="row buttons">
-              <div class="col-xs-12 col-md-2 col-md-offset-4">
-                <a href="know_us.html" class="btn btn-warning btn-block">Conócenos</a>
-              </div>
-              <div class="col-xs-12 col-md-2">
-                <a href="#" class="btn btn-default btn-block">Diviertéte</a>
+            <div class="row vertical-align">
+              <div class="col-xs-12">
+                <div class="row ">
+                  <div class="col-xs-12 col-md-6 col-md-offset-3 images">
+                    <img id="img_index_center01" class="img-center " src="images/img_index/img01.png">
+                    <img id="img_index_center02" class="img-center hide" src="images/img_index/img02.png">
+                    <img id="img_index_center03" class="img-center hide" src="images/img_index/img03.png">
+                  </div>
+                </div>
+                <div class="row buttons">
+                  <div class="col-xs-12 col-md-2 col-md-offset-4">
+                    <a href="know_us.html" class="btn btn-warning btn-block">Conócenos</a>
+                  </div>
+                  <div class="col-xs-12 col-md-2">
+                    <a href="#" class="btn btn-default btn-block">Diviertéte</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -61,11 +65,11 @@
           <ul>
             <li><b><a href="/">Home</a></b></li>
             <li><b><a href="know_us.html">Conócenos</a></b></li>
-            <li class="more-padding" >Quienes Somos</li>
+            <li class="more-padding" >Quiénes Somos</li>
             <li class="more-padding" >Productos</li>
             <li class="more-padding" >Blog</li>
             <li class="more-padding" >Contacto</li>
-            <li><b>Diviertete</b></li>
+            <li><b>Diviértete</b></li>
             <li><b>Soy un cliente</b></li>
           </ul>
         </div>
