--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,9 @@
       </div>
     </nav>
     <section id="content">
-      <div class="jumbotron bg01 index-ff">
+      <div class="jumbotron bg01 index-ff vertical-align">
           <div class="container">
-            <div class="row vertical-align">
+            <div class="row">
               <div class="col-xs-12">
                 <div class="row ">
                   <div class="col-xs-12 col-md-6 col-md-offset-3 images">
