--- a/app/know_us.html
+++ b/app/know_us.html
@@ -84,7 +84,7 @@
               <div class="row vertical-align">
                 <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 texts">
                   <p class="text bold-blue"><span class="font-dif">La unión entre el esfuerzo,</span> <br> <span class="font-dif-less">el amor por el trabajo</span> <br><span class="font-dif">y la familia,</span> </p>
-                  <p class="text"><b>Hicieron que esta empresa naciera en la misma casa donde creció gran parte de la familia. </b></p>
+                  <p class="text"><b>hicieron que esta empresa naciera en la misma casa donde creció gran parte de la familia. </b></p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-5">
                   <img src="images/img_know_us/05.png">
